2005-10-28 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCsymt.c (computeType): fixed bug 1358192: added missing else,
	reformatted for	better readability

2005-11-17 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/Makefile.rules, device/lib/pic16/Makefile.subdir:
	  itroduced SILENT option to make building of pic16 libraries less
	  verbose - used for nightly snapshot build
	* doc/sdccman.lyx: documented that SDCDB and ucSim are currently not
	  available on Win32 platforms.
	* sdcc/device/lib/Makefile.in: added library sources for mcs51, small,
	  medium, large, pic and pic16

2005-11-16 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/printf_large.c: Temporary patch for bug 1358192: 
	  printf("%f"...) sets fraction to zero. 

2005-11-16 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (LinkFlow): handle empty flows correctly,
	  fixes #1357221
	* src/pic/gen.c (genIfx): implemented for CARRY bit
	* src/pic16/gen.c (genAssign,genCast): fixed assigning/casting
	  to generic pointers, fixes #1357332,
	  (pic16_movLit2f): NEW,
	  (pic16_storeForReturn,genDataPointerSet): use pic16_movLit2f

2005-11-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (parseCmdLine): fixed bug 1356800, thanks rsudjian

2005-11-11 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c: handle FPOINTERS like POINTERS everywhere
	* src/pic16/gen.c (pic16_derefPtr): now works for non-pointers as well,
	  compute pointer's type from operand,
	  (genUnpackBits,genPackBits): handle FPOINTERS correctly, re-indented,
	  improved single bit reads, fixes bug #1353379

2005-11-09 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added lib/pic to the package

2005-11-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (valUnaryPM): fixed bug 1350699

2005-11-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1348008.c: added
	* src/mcs51/gen.c (saveRBank, unsaveRBank): fixed bug 1348008